--- a/sections/PhysTheory/ProjectilePhysics.tex
+++ b/sections/PhysTheory/ProjectilePhysics.tex
@@ -1,8 +1,8 @@
 \chapter{Projectile Physics}\label{ProjPhys}
-As the turret shuld be able to accurately hit a target location, we will need to
-determine what mathematical and physical models are necessary to implement in
+As the turret should be able to accurately hit a target location, we will need
+to determine what mathematical and physics models are necessary to implement in
 order to accomplish this task. This knowledge comes in the form of theorems
-relating to the trajectory of projectiles under the influence of earths
+relating to the trajectory of projectiles under the influence of earth's
 gravity, namely the theory of projectile motion.
 
 % In order to accurately fire a projectile, there is a number of information which
@@ -10,7 +10,7 @@ gravity, namely the theory of projectile motion.
 % projectile motion and the trajectory of projectiles under the influence of
 % earths gravity.\nl
 
-Due to the importance that these physical phenomena have in relation the the
+Due to the importance that these physical phenomena have in relation to the
 project, this chapter will be used to present, explain and discuss the relevant
 mathematical and physical models.
 
