--- a/sections/PhysTheory/TargetPhys.tex
+++ b/sections/PhysTheory/TargetPhys.tex
@@ -1,8 +1,8 @@
-\section{Target Requirements}\label{TargetReq}
-The purpose of the project is to create an automated turret, which is capable of
-hitting a target in motion. One of the requirements for this process is, that
-the turret should be incapable of hitting the target if it simply fired at its
-current position, without trying to hit a future calculated position. As such,
-this imposes a requirement for the target, which can be defined by how fast the
-target moves and the size of the target. This section will be used to calculate
-these limitations.
+% \section{Target Requirements}\label{TargetReq}
+% The purpose of the project is to create an automated turret, which is capable of
+% hitting a target in motion. One of the requirements for this process is, that
+% the turret should be incapable of hitting the target if it simply fired at its
+% current position, without trying to hit a future calculated position. As such,
+% this imposes a requirement for the target, which can be defined by how fast the
+% target moves and the size of the target. This section will be used to calculate
+% these limitations.
