--- a/sections/Sensors/Camera.tex
+++ b/sections/Sensors/Camera.tex
@@ -4,15 +4,15 @@ make use of a specialized camera, which is capable of identifying coloured
 objects. In order to use the camera, the user specifies a colour of choice,
 which will then be searched for. The colours are specified using a program
 called ``NXTCamView'''. When the camera registers an object of this colour, it will
-build a datalogical representation of the object consisting of a number of
+build a representation of the object which consists of a number of
 rectangles. Such a representation can be seen in \autoref{TwoBlobs2.PNG}.
 
 \figx[0.70]{TwoBlobs2.PNG}{Visual representation of the output from the camera.}
 
 For each identified rectangle, the camera outputs the coordinates for that
-rectangle's sides, top, bottom and colour. 
+rectangle's sides, top, bottom and a colour. 
 
-Below are the technical specifications \citep[p. 1]{NXTCam} for the camera.
+Below are the technical specifications for the camera \citep[p. 1]{NXTCam}:
 \begin{itemize}
   \item Tracks up to 8 targets
   \item Analyzes 30 frames per second
@@ -24,9 +24,9 @@ Below are the technical specifications \citep[p. 1]{NXTCam} for the camera.
 
 \section{Camera Sensor Test}\label{CamTest}%Will most likely need a better
 Testing the camera aims at answering two main questions. Namely
-what colours can be easily recognized, and at what distance can the target be
-identified. As such, this subsection will consist of a test setup, the resulting
-data and the conclusions which can be drawn from this data.
+what colours can be easily recognized, and at what distance the target can be
+identified at. As such, this subsection will consist of a test setup, the
+resulting data and the conclusions which can be drawn from this data.
 
 \subsection{Camera Test - Setup}\label{CamTestSetup}
 The setup for testing the camera consists of placing the turret at one end of a
@@ -41,12 +41,12 @@ This setup can be seen in \autoref{SensorCamSetupV2}.
 \figx[0.15]{SensorCamSetupV2}{Setup for the camera test (With Background).}
 
 \subsection{Camera Test Results - Colours}\label{CamTestColours}
-In order to determine what colour can best be detected, the target is wrapped
-with a piece of coloured paper, and is then placed at a distance of 2m from the
-turret. The camera is then used to search for the specified colour. As explained
-in \autoref{SensorTheory} this data consists of rectangular segments of the
-identified colour, and these segments sizes and colours. The quality of the
-individual colours is determined by looking at two factors. The first factor is
+In order to determine which colour is the easiest to detect, the target is
+wrapped with a piece of coloured paper, and is then placed at a distance of
+200cm from the turret. The camera is then used to search for the specified
+colour. As explained in \autoref{SensorTheory} this data consists of rectangular
+segments of the identified colour, and these segments sizes and colours. The
+quality of the individual colours is determined by looking at two factors. The first factor is
 the consistency of the recorded data, which is determined by the variance in the
 data. The second factor is the cameras ability to keep recognizing the target
 at different distances.\nl
@@ -69,7 +69,7 @@ following:
 \begin{itemize}
   \item The blue and yellow colours can not be recognized
   \item The green colour has the highest variation of 163 pixels
-  \item The green colour has a low amount of frames with recognition
+  \item The green colour has the lowest amount of frames were it is recognized
   \item The red colour has the lowest variation of 19 pixels
   \item Of the 'ok' colours, orange and red, orange has the largest measured
   average area.
@@ -91,19 +91,19 @@ following:
   \item Given no contrasting background 'orange' has no variance in data
 \end{itemize}
 
-Based on these conclusions we can determine that orange would likely be colour
-of choice, as the camera is capable of recognizing the colour without any
-variance in the recorded data. A problem with this conclusion was determined
+Based on these conclusions we can determine that orange would likely be
+the colour of choice, as the camera is capable of recognizing the colour without
+any variance in the recorded data. A problem with this conclusion was determined
 through further testing, which revealed the flaw, that while orange is easily
 recognized, it is also easy to get false positives during actual operation. As
 such, the colour used for the final target is \textbf{red}, as it is almost as
-easily recognizeable as orange, but leads to much fewer false positives.
+easy to recognize as orange, but leads to fewer false positives.
 
 \subsection{Camera Test Results - Distance}\label{CamTestDistance}
 Based on the choice made in \autoref{CamTestColours} to use red as the colour
 of the target, this section will be used to further determine how well this
-colour can be used at different distances. For this purpose, the target will be
-placed at various distances from the target, as noted in \autoref{CamTestSetup}.
+colour can be tracked at different distances. For this purpose, the target will
+be placed at various distances from the turret, as noted in \autoref{CamTestSetup}.
 The measurements will use the same ratings 'ok', 'bad', 'very bad' and 'null',
 as described in \autoref{CamTestColours}. The resulting data from this test can be
 seen in \autoref{table:CamTest3}.
@@ -112,7 +112,7 @@ seen in \autoref{table:CamTest3}.
 
 The data presented in \autoref{table:CamTest3} represents the camera's ability
 to recognize the target at different distances, but during the testing a major
-flaw was identified. It was found that the the measured colour of the target
+flaw was identified. It was found that the measured colour of the target
 changes based on its distance from the turret and the light levels at its
 current location. In effect this means that no single colour can be used to
 recognize the target at all distances, but instead multiple colours need to be
@@ -125,10 +125,10 @@ lit areas.
 During this chapter the two sensors were tested, and it was determined how best
 to use them to gather the most accurate data. In order to determine the distance
 to the target, two ultrasonic distance sensors are being used. The reason for
-using two sensors is to increase the chance of at least one sensor to recieve
+using two sensors is to increase the chance of at least one sensor to receive
 useful data. The colour chosen for the camera sensor was determined to be red,
-as it was almost as recignizeable as orange, but led to much fever instances of
-false positive results. To circumvent the problem of the camera recognizing the
+as it was almost as recognizable as orange, but led to fewer instances of
+false positives. To circumvent the problem of the camera recognizing the
 target as different colours based on the distance, all tests of the turret are
 done using a powerful spotlight, and the camera has been instructed to search
 for a variety of different shades of red.
